--- a/js_client/package.json
+++ b/js_client/package.json
@@ -9,7 +9,23 @@
     "dependencies": {
         "@music-assistant/sendspin-js": "^2.0.0"
     },
+    "peerDependencies": {
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0"
+    },
+    "peerDependenciesMeta": {
+        "react": {
+            "optional": true
+        },
+        "react-dom": {
+            "optional": true
+        }
+    },
     "devDependencies": {
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "typescript": "^5.0.0",
         "vite": "^5.0.0"
     }
