--- a/custom_components/sendspin_browser/manifest.json
+++ b/custom_components/sendspin_browser/manifest.json
@@ -3,7 +3,7 @@
   "name": "Sendspin Browser Player",
   "codeowners": [],
   "config_flow": true,
-  "dependencies": ["frontend", "http"],
+  "dependencies": ["frontend", "http", "zeroconf"],
   "documentation": "https://github.com/Sendspin-Protocol/sendspin-cli",
   "iot_class": "local_polling",
   "version": "1.0.0"
